--- a/ranked4-frontend/src/app/app.component.html
+++ b/ranked4-frontend/src/app/app.component.html
@@ -20,6 +20,9 @@
           <button class="dropdown-item" (click)="playPrivateGame()">
             👥 Private match
           </button>
+          <button class="dropdown-item" (click)="playAiGame()">
+            🤖 VS AI
+          </button>
         </div>
       </div>
       }
@@ -68,6 +71,9 @@
   </button>
   <button class="btn btn-primary" (click)="playPrivateGame()">
     Private match
+  </button>
+  <button class="btn btn-primary" (click)="playAiGame()">
+    VS AI
   </button>
 
   <hr class="menu-divider">
