allow click on card instead of only button

--- a/ranked4-frontend/src/app/shop/shop.component.html
+++ b/ranked4-frontend/src/app/shop/shop.component.html
@@ -104,7 +104,7 @@
 
     <div class="products-grid">
       @for (lootbox of lootboxes(); track lootbox.id) {
-      <div class="product-card lootbox-card" [class.daily-free-card]="lootbox.dailyFree">
+      <div class="product-card lootbox-card" [class.daily-free-card]="lootbox.dailyFree" (click)="openLootboxModal(lootbox)">
         <div class="product-image">
           <img [src]="lootbox.imageUrl" alt="{{ lootbox.name }}" class="lootbox-image">
           @if (lootbox.dailyFree) {
@@ -125,7 +125,7 @@
               <span>{{ lootbox.price }}</span>
               }
             </div>
-            <button class="btn btn-buy btn-lootbox" (click)="openLootboxModal(lootbox)">
+            <button class="btn btn-buy btn-lootbox">
               See details
             </button>
           </div>
